--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,19 +4,24 @@
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="username-login">Username:</label>
+        <input class="form-input" type="text" id="username-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
+        <label for="password-login">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+      <div class="container">
+        <div class="row">
+          <div class="btn-toolbar mx-auto">
+            <button id="login" class="btn btn-primary mr-2" type="submit">Login</button>
+            <a href="/signup">Sign Up</button>
+          </div>
+        </div>
       </div>
     </form>
   </div>
-  
+
 </div>
 
 <script src="./js/login.js"></script>
