--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,11 +1,11 @@
+<h2>Your Dashboard</h2>
 {{#if posts.length}}
 <div>
-    <h3>Your Recent Posts</h3>
+    
     {{#each posts as |post|}}
     <div class="row mb-4">
         <div class="col-md-5">
             <h2>
-                <!-- Call helper function with triple brackets to render the emoji span as HTML -->
                 <a href="/post/{{id}}">{{title}}</a>
             </h2>
         </div>
