--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
       <div class="col">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/dashboard">Dashboard</a>
@@ -40,11 +40,7 @@
     <div class="row">
       <div class="col">
         <div class="jumbotron jumbotron-fluid">
-          {{#if logged_in}}
           <h1 class="display-4">Tech Blog</h1>
-          {{else}}
-          <h1 class="display-4">My Dashboard</h1>
-          {{/if}}
         </div>
       </div>
     </div>
